# OpenGL

Learn_OpenGL/: CMakeLists.txt  Learn_OpenGL.sln
Learn_OpenGL/Learn_OpenGL/: Learn_OpenGL.vcxproj
Learn_OpenGL/resources/shader/: fragment.frag
Learn_OpenGL/src/: main.cpp
Learn_OpenGL/src/core/: Application.cpp  Application.h  Window.cpp  Window.h  main.cpp
